Bug 75622 - FILEOPEN: very slow on opening this slide with table
Summary: FILEOPEN: very slow on opening this slide with table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: perf, regression
: 75474 76875 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-28 20:30 UTC by Theo
Modified: 2015-12-15 11:39 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
single slide impress that it very slow on loading (24.53 KB, application/vnd.oasis.opendocument.presentation)
2014-02-28 20:30 UTC, Theo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Theo 2014-02-28 20:30:49 UTC
Created attachment 94919 [details]
single slide impress that it very slow on loading

The attached file (a single slide Impress file) is very slow to open in LO 4.2.1.1. Both on Mac OSX 10.9 and on Win8.1.
We use this as template in our company to display our product roadmap, the original presentation had many (10+) of these slides and takes 5 minutes or so to open. Given the confidential nature I can not attach that version, but I have nailed it down to the table we use as a backdrop.
File opens normally in 4.5.1.2.
Comment 1 tommy27 2014-03-01 05:29:36 UTC
reproducible on Windows7 64bit too using 4.2.0.4
considerably slower opening in respect to 4.1.5.3

status NEW. Regression.

I add Impress expert to CC list.
Comment 2 Andras Timar 2014-03-23 18:17:56 UTC
 e586fe4585dc07e6f6dd061d09f6a7fb0b22948c is the first bad commit
commit e586fe4585dc07e6f6dd061d09f6a7fb0b22948c
Author: Jan Holesovsky <kendy@suse.cz>
Date:   Thu Jun 27 13:27:48 2013 +0200

    fdo#46186: Sync the internal representation of the table with its appearance.
    
    This fixes the saving / loading of RTL setting of the table, and changes
    the UI behavior when you click the LTR/RTL buttons with table border selected
    a bit.
Comment 3 Andras Timar 2014-03-24 18:29:23 UTC
Lubos, can you please take over. Kendy said:
"It looks to me that I have removed some caching that was there; so I guess the performance problem has always been there, then somebody introduced some kind of caching to overcome that, but the caching was broken. I guess the profile will show something very stupid going on."
Comment 4 Commit Notification 2014-03-25 10:32:50 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26b06662ebc3e5d664400bc95c39d6220de03136

avoid repeated table layouting (fdo#75622)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-03-25 10:53:04 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f74991af12c78b25292641605ce1f2c55c44b33f&h=libreoffice-4-2

avoid repeated table layouting (fdo#75622)


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Andras Timar 2014-03-25 15:03:22 UTC
*** Bug 75474 has been marked as a duplicate of this bug. ***
Comment 7 Theo 2014-03-26 08:15:43 UTC
I tested this with master~2014-03-26_02.39.10_LibreOfficeDev_4.3.0.0.alpha0_MacOS_x86
Can confirm that the file now loads much faster.
Comment 8 Theo 2014-03-26 14:16:32 UTC
can this fix be ported to 4.2.3 as well? This issue is currently forcing to stick to the 4.1 load line.
Comment 9 Andras Timar 2014-03-26 14:42:05 UTC
Sorry, it's too late for 4.2.3. It was closed yesterday.
Comment 10 David Tardon 2014-04-24 11:51:08 UTC
*** Bug 76875 has been marked as a duplicate of this bug. ***
Comment 11 Robinson Tryon (qubit) 2015-12-15 11:39:32 UTC
Migrating Whiteboard tags to Keywords: (perf)
[NinjaEdit]