avoid repeated table layouting (fdo#75622)

With the document from fdo#75622, this saves 3775 calls and leaves only 13.
e586fe4585dc07e6f6dd061d09f6a7fb0b22948c removed avoiding the call
to LayoutTable(), which made loading slow. I checked that the doc from that
bugreport still works, so if very original code was correct in avoiding
the call sometimes, this should be ok too.

Change-Id: Ia80f974d4497e5cb04612331527eb87b579ddb76